Coruse cards alignment fixes

--- a/app/styles/components/teacher/class/_course-search-pull-up.scss
+++ b/app/styles/components/teacher/class/_course-search-pull-up.scss
@@ -174,23 +174,16 @@
       }
     }
 
-    // .pull-up-body-container {
-      // max-height: calc(100vh - 116px);
-      // height: calc(90vh - 100px);
-      // overflow-y: auto;
-      // width: 100%;
-      // padding-top: 30px;
-      // padding-bottom: 30px;
-      // background: #f1f3f7;
-      .course-cards-container {
+    .pull-up-body-container {
+      max-height: calc(100vh - 116px);
+      height: calc(90vh - 100px);
+      overflow-y: auto;
+      width: 100%;
+      padding-top: 30px;
+      padding-bottom: 30px;
+      background: #f1f3f7;
+      .cards-container {
         display: grid;
-        max-height: calc(100vh - 116px);
-        height: calc(90vh - 100px);
-        overflow-y: auto;
-        width: 100%;
-        padding-top: 30px;
-        padding-bottom: 30px;
-        background: #f1f3f7;
         grid-template-columns: auto auto auto;
         .course-card-container {
           .card-panel-container {
@@ -198,16 +191,12 @@
             margin-bottom: 15px;
           }
         }
-        .course-card-container {
-          text-align: center;
-          font-size: 20px;
-        }
       }
       .course-not-found {
         text-align: center;
         font-size: 18px;
       }
-    // }
+    }
   }
 
   @media screen and (max-width: 992px) {
